# tfidf_app

./: REDME.md  app.py  db.py  pyproject.toml  test.txt  text2.txt  text3.txt  text_processor.py  tfidf.db
static/: style.css
templates/: index.html  results.html
uploads/: example.txt
