[tool.poetry]
name = "tfidf-app"
version = "0.1.0"
description = ""
authors = ["macbook <kriukov@pos-credir.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
nltk = "^3.9.1"
pandas = "^2.2.3"
black = "^25.1.0"
flake8 = "^7.2.0"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
